// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectively.Type Addition 1`] = `
Addition {
  "left": 5,
  "precedence": 17,
  "right": 3,
  "symbol": "+",
}
`;

exports[`selectively.Type Multiplication 1`] = `
Multiplication {
  "left": 5,
  "precedence": 15,
  "right": 3,
  "symbol": "*",
}
`;

exports[`selectively.Type Multiplication and Addition 1`] = `
Multiplication {
  "left": Addition {
    "left": 4,
    "precedence": 17,
    "right": 5,
    "symbol": "+",
  },
  "precedence": 15,
  "right": 3,
  "symbol": "*",
}
`;
